--- a/基础/index.html
+++ b/基础/index.html
@@ -17,12 +17,13 @@
   <script>
     // 场景
     var scene = new THREE.Scene()
-    // var ge = new THREE.ShpereGeometry(60, 40, 40) // 创建球体
-    var ge = new THREE.BoxGeometry(100, 100, 100) // 创建球体
+    // var ci = new THREE.SphereGeometry(60, 40, 40) // 创建球体
+    var ge = new THREE.BoxGeometry(100, 100, 100) // 创建正方体
     // 立方体
     var ma = new THREE.MeshLambertMaterial({
       color: 0x0000ff
-    }) // 材质
+    }) 
+    // 材质
     var me = new THREE.Mesh(ge, ma) // 网格模型
     scene.add(me)
     console.log(scene)
